@@ -12,7 +12,7 @@ import org.springframework.web.bind.annotation.*;
 import com.lenora.staj.websocket.rest.response.TopicListView;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @RestController
 @RequestMapping("/api/forum/topics")
@@ -23,23 +23,52 @@ public class TopicController {
     @Autowired
     private UserService userService;
 
-    @GetMapping
-    public List<TopicListView> getAllTopics() {
-        return topicService.findAll().stream()
+    @GetMapping("/liked")
+    public List<TopicListView> getLikedTopics(@RequestAttribute("username") String username) {
+        Set<Topic> topics = userService.getUser(username).getLikedTopics();
+        List<TopicListView> views = topics.stream()
                 .map(topic -> new TopicListView(
                         topic.getId().toString(),
-                        topic.getTopic(),
-                        topic.getTitle(),
+                        topic.getName(),
+                        topic.getDescription(),
                         topic.getCreator().getUsername()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+        return views;
     }
 
+    @GetMapping("/created")
+    public List<TopicListView> getCreatedTopics(@RequestAttribute("username") String username) {
+        Set<Topic> topics = userService.getUser(username).getCreatedTopics();
+        List<TopicListView> views = topics.stream()
+                .map(topic -> new TopicListView(
+                        topic.getId().toString(),
+                        topic.getName(),
+                        topic.getDescription(),
+                        topic.getCreator().getUsername()
+                ))
+                .toList();
+        return views;
+    }
+
+    @GetMapping
+    public List<TopicListView> getAllTopics() { // anasayfadaki tüm topicler için
+        List<Topic> topics = topicService.findAll();
+        List<TopicListView> views = topics.stream()
+                .map(topic -> new TopicListView(
+                        topic.getId().toString(),
+                        topic.getName(),
+                        topic.getDescription(),
+                        topic.getCreator().getUsername()
+                ))
+                .toList();
+        return views;
+    }
 
     @PostMapping
     public ResponseEntity<?> create(@RequestBody TopicCreateView topicCreateView, @RequestAttribute("username") String username) {
         User user = userService.getUser(username);
-        Topic topic = topicService.createTopic(topicCreateView.getTopic(), topicCreateView.getTitle(), user);
+        Topic topic = topicService.createTopic(topicCreateView.getName(), topicCreateView.getDescription(), user);
         if (user != null) {
             return new ResponseEntity<>(HttpStatus.OK);
         } else {
@@ -47,4 +76,32 @@ public class TopicController {
         }
     }
 
+    @PostMapping("/like")
+    public ResponseEntity<?> like(@RequestAttribute("id") String topicId, @RequestAttribute("username") String username) {
+
+        Topic topic = topicService.findById(topicId);
+
+        if (topic != null) {
+            Set<User> members = topic.getMembers();
+            User user = userService.getUser(username);
+            assert user != null;
+            members.add(user);
+            return new ResponseEntity<>(HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+    }
+
+    @PostMapping("/search")
+    public ResponseEntity<?> search(@RequestBody TopicListView topicListView) { // @RequestBody String topicName
+        String topicId = topicListView.getId();
+        Topic topic = topicService.findById(topicId);
+        //  topicService.getMethod(topicService.getClass())
+
+        if (topic != null) {
+            return new ResponseEntity<>(HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
 }
